fix render issue on mobile

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -98,4 +98,5 @@ code {
 	cursor:pointer;
 	width: 22em;
 	max-width: 100%;
+    box-sizing: border-box;
 }
